<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
android:id="@+id/widget29"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
xmlns:android="http://schemas.android.com/apk/res/android"
android:background="#ff8fc0eb"
>

<RelativeLayout 
android:layout_width="fill_parent"
android:layout_height="50dip"
android:layout_gravity="center_vertical|center_horizontal">

<ImageView android:id="@+id/Logo"
android:layout_centerInParent="true" 
android:layout_height="wrap_content" 
android:src="@drawable/demobank" 
android:layout_width="wrap_content"/>

</RelativeLayout>


<TableLayout
android:id="@+id/hesapHisseTitle"
android:layout_width="fill_parent"
android:background="#d9ecff"
android:layout_height="50dip">

<TableRow android:layout_width="fill_parent" 
android:layout_height="fill_parent"
android:layout_weight="1"
android:gravity="center"
android:layout_gravity="center">

<TextView android:text="@string/hisselerTitle"
android:layout_width="wrap_content" 
android:layout_height="wrap_content"
android:textSize="20dip"
android:textStyle="bold"
android:textColor="#3d84da"
android:layout_marginTop="3px"/>

</TableRow>
</TableLayout>	

<TableLayout android:id="@+id/hesapTablo"
android:layout_width="fill_parent"
android:stretchColumns="*"
android:layout_height="50dip">

<TableRow android:background="#ffffff">

<TextView android:text="@string/hesapNoLabel"
android:layout_width="wrap_content" 
android:layout_height="wrap_content"
android:textSize="15dip"
android:textColor="#3d84da"
android:textStyle="bold"
android:width="150dip"
android:layout_marginTop="3px"/>

<TextView android:id="@+id/hesapNoText" 
android:layout_width="wrap_content" 
android:layout_height="wrap_content"
android:textSize="15dip"
android:textColor="#3d84da"
android:layout_marginTop="3px"/>

</TableRow>

<TableRow android:background="#f0eeee">

<TextView android:text="@string/turuLabel"
android:layout_width="wrap_content" 
android:layout_height="wrap_content"
android:textStyle="bold"
android:textSize="15dip"
android:textColor="#3d84da"
android:layout_marginTop="3px"/>

<TextView android:text="@string/cari"
android:layout_width="wrap_content" 
android:layout_height="wrap_content"
android:textSize="15dip"
android:textColor="#3d84da"
android:layout_marginTop="3px"/>

</TableRow>
</TableLayout>

<Button android:id="@+id/hisse1Button"
android:text="ASYA"
android:drawableRight="@drawable/next" 
android:layout_width="fill_parent" 
android:background="@layout/custom_button"
android:textColor="#ffffff"
android:textSize="20dip"
android:textStyle="bold"
android:layout_height="80dip"/>

<Button android:id="@+id/hisse2Button"
android:text="AKSA" 
android:drawableRight="@drawable/next" 
android:layout_width="fill_parent" 
android:background="@layout/custom_button"
android:textColor="#ffffff"
android:textSize="20dip"
android:textStyle="bold"
android:layout_height="80dip"/>

<Button android:id="@+id/hisse3Button"
android:text="ASYAP" 
android:drawableRight="@drawable/next" 
android:layout_width="fill_parent" 
android:background="@layout/custom_button"
android:textColor="#ffffff"
android:textSize="20dip"
android:textStyle="bold"
android:layout_height="80dip"/>

<Button android:id="@+id/hisse4Button"
android:text="BOSSA" 
android:drawableRight="@drawable/next" 
android:layout_width="fill_parent" 
android:background="@layout/custom_button"
android:textColor="#ffffff"
android:textSize="20dip"
android:textStyle="bold"
android:layout_height="80dip"/>

<TableLayout
android:id="@+id/hesapTablo"
android:layout_width="fill_parent"
android:layout_height="65px">
<TableRow android:layout_width="fill_parent" 
android:layout_height="fill_parent"
android:layout_weight="1"
android:gravity="center"
android:layout_gravity="center">
<TextView android:text="@string/copyright"
android:textStyle="italic"
android:layout_marginTop="3px"
android:textColor="#767675"/>
</TableRow>
</TableLayout>

</LinearLayout>